Towards some reorganization of the test directory

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,12 +24,12 @@ add_subdirectory (thresholds)
 add_subdirectory (checkers)
 add_subdirectory (rationals)
 
-# Needed if shared libraries
+# XXX: needed if shared libraries
 if (BUILD_CRAB_LIBS_SHARED)
-if (USE_APRON)
-  install(FILES ${APRON_LIBRARY} DESTINATION lib)
-endif ()
-if (USE_LDD)
-  install(FILES ${LDD_LIBRARY} DESTINATION lib)
-endif ()
+  if (USE_APRON)
+    install(FILES ${APRON_LIBRARY} DESTINATION lib)
+  endif ()
+  if (USE_LDD)
+    install(FILES ${LDD_LIBRARY} DESTINATION lib)
+  endif ()
 endif ()
