--- a/tests/inter/CMakeLists.txt
+++ b/tests/inter/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_executable(inter test.cc)
-target_link_libraries (inter ${CRAB_LIBS})
+add_executable(inter-tests inter-tests.cc)
+target_link_libraries (inter-tests ${CRAB_LIBS})
 
-install(TARGETS inter
+install(TARGETS inter-tests
   RUNTIME DESTINATION tests/inter
   )
