--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,23 +7,6 @@ set (CRAB_LIBS Crab
   ${GMP_LIB} 
   )
 
-add_subdirectory (simple)
-if (USE_LDD)
-  add_subdirectory (boxes)
-endif ()
-if (USE_APRON)
-  add_subdirectory (apron)
-endif ()
-add_subdirectory (arrays)
-add_subdirectory (nullity)
-add_subdirectory (terms)
-add_subdirectory (inter)
-add_subdirectory (cg)
-add_subdirectory (cfg)
-add_subdirectory (thresholds)
-add_subdirectory (checkers)
-add_subdirectory (rationals)
-
 # XXX: needed if shared libraries
 if (BUILD_CRAB_LIBS_SHARED)
   if (USE_APRON)
@@ -33,3 +16,33 @@ if (BUILD_CRAB_LIBS_SHARED)
     install(FILES ${LDD_LIBRARY} DESTINATION lib)
   endif ()
 endif ()
+
+function (AddTest testSrc)
+  #Extract the filename without an extension (NAME_WE)
+  get_filename_component(testName ${testSrc} NAME_WE)
+  #Add compile target
+  add_executable(${testName} ${testSrc})
+  #link with crab libraries
+  target_link_libraries(${testName} ${CRAB_LIBS})
+  #move testing binaries into a test-bin directory
+  set_target_properties(${testName} PROPERTIES 
+    RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_CURRENT_SOURCE_DIR}/test-bin)
+  #Finally add it to test execution
+  add_test(NAME ${testName} 
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test-bin
+    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test-bin/${testName} )
+endfunction()
+
+function (AddTestDir dirName)
+  file(GLOB TEST_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${dirName}/*.cc)
+  foreach(testSrc ${TEST_SRCS})
+    AddTest (${testSrc})
+  endforeach(testSrc)
+endfunction ()  
+
+AddTestDir (domains)
+AddTestDir (inter)
+AddTestDir (cg)
+AddTestDir (cfg)
+AddTestDir (thresholds)
+AddTestDir (checkers)
