Forgotten from previous commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -267,9 +267,7 @@ endif ()
 install(DIRECTORY include/ DESTINATION include)
 
 # Licenses
-##install(FILES Crab_LICENSE.txt DESTINATION shared/doc)       
-
-install(FILES Ikos_LICENSE.pdf DESTINATION shared/doc)       
+##install(FILES LICENSE DESTINATION shared/doc)       
 
 
 
