--- a/tests/disintervals/CMakeLists.txt
+++ b/tests/disintervals/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_executable(dis-int test.cc)
-target_link_libraries (dis-int ${CRAB_LIBS})
+target_link_libraries (dis-int ${TEST_LIBS})
 
 install(TARGETS dis-int
-  RUNTIME DESTINATION tests/domains
+  RUNTIME DESTINATION tests
   )
 
 
