--- a/tests/thresholds/CMakeLists.txt
+++ b/tests/thresholds/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_executable(thresholds test.cc)
-target_link_libraries (thresholds ${CRAB_LIBS})
+target_link_libraries (thresholds ${TEST_LIBS})
 
 install(TARGETS thresholds
-  RUNTIME DESTINATION tests/fixpo
+  RUNTIME DESTINATION tests
   )
 
 
