--- a/tests/apron/CMakeLists.txt
+++ b/tests/apron/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_executable(apron-domains apron_test.cc)
-target_link_libraries (apron-domains ${CRAB_LIBS})
+target_link_libraries (apron-domains ${TEST_LIBS})
 
 install(TARGETS apron-domains
-  RUNTIME DESTINATION tests/domains
+  RUNTIME DESTINATION tests
   )
 
 
