--- a/tests/arrays/CMakeLists.txt
+++ b/tests/arrays/CMakeLists.txt
@@ -1,13 +1,13 @@
 add_executable(array_graph array_graph_tests.cc)
-target_link_libraries (array_graph ${CRAB_LIBS})
+target_link_libraries (array_graph ${TEST_LIBS})
 
 add_executable(array_smashing array_smashing_tests.cc)
-target_link_libraries (array_smashing ${CRAB_LIBS})
+target_link_libraries (array_smashing ${TEST_LIBS})
 
 install(TARGETS array_graph
-  RUNTIME DESTINATION tests/domains
+  RUNTIME DESTINATION tests
   )
 
 install(TARGETS array_smashing
-  RUNTIME DESTINATION tests/domains
+  RUNTIME DESTINATION tests
   )
