--- a/tests/nullity/CMakeLists.txt
+++ b/tests/nullity/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(nullity test.cc)
-target_link_libraries (nullity ${CRAB_LIBS})
+target_link_libraries (nullity ${TEST_LIBS})
 
 install(TARGETS nullity
-  RUNTIME DESTINATION tests/domains
+  RUNTIME DESTINATION tests
   )
 
