Copy license and readme only if toplevel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -292,8 +292,10 @@ endif ()
 
 install(DIRECTORY include/ DESTINATION include)
 
-# Licenses
-install(FILES LICENSE DESTINATION ./)       
+if (TopLevel)
+   install(FILES LICENSE DESTINATION .)
+   install(FILES README.md DESTINATION .)
+endif () 
 
 
 
