Copy license and readme only if toplevel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -311,8 +311,11 @@ endif ()
 
 install(DIRECTORY include/ DESTINATION include)
 
-# License
-install(FILES LICENSE DESTINATION ./)       
+if (TopLevel)
+   install(FILES LICENSE DESTINATION .)
+   install(FILES README.md DESTINATION .)
+endif () 
+
 
 
 
