Modified CMakeLists.txt to pass crab headers to parent project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,25 +75,26 @@ if (NOT CMAKE_INSTALL_RPATH)
 endif ()
 
 
-if (NOT BUILD_CRAB_LIBS_SHARED)
-  set (Boost_USE_STATIC_LIBS ON)
-endif ()  
-if (ENABLE_TESTS)
-  find_package (Boost 1.55.0 COMPONENTS program_options REQUIRED)
-else ()
-  find_package (Boost 1.55.0)
-endif ()
-if (Boost_FOUND)
-  include_directories (${Boost_INCLUDE_DIRS})
-endif ()
-
-find_package(GMP REQUIRED)
-if (GMP_FOUND)
-  include_directories (${GMP_INCLUDE_DIR})
-  include_directories (${GMPXX_INCLUDE_DIR})
-else()
-  set(GMP_LIB "")
-  set(GMPXX_LIB "")
+if (TopLevel)
+  if (NOT BUILD_CRAB_LIBS_SHARED)
+    set (Boost_USE_STATIC_LIBS ON)
+  endif ()  
+  if (ENABLE_TESTS)
+    find_package (Boost 1.55.0 COMPONENTS program_options REQUIRED)
+  else ()
+    find_package (Boost 1.55.0)
+  endif ()
+  if (Boost_FOUND)
+    include_directories (${Boost_INCLUDE_DIRS})
+  endif ()
+  find_package(GMP REQUIRED)
+  if (GMP_FOUND)
+    include_directories (${GMP_INCLUDE_DIR})
+    include_directories (${GMPXX_INCLUDE_DIR})
+  else()
+    set(GMP_LIB "")
+    set(GMPXX_LIB "")
+  endif()
 endif()
 
 
@@ -294,7 +295,18 @@ set (CRAB_DEPS_LIBS
 if (TopLevel)
   set (CRAB_LIBS Crab ${CRAB_DEPS_LIBS})
 else ()
+  ## XXX: propagate CRAB_LIBS and CRAB_INCLUDE_DIRS to parent
   set (CRAB_LIBS Crab ${CRAB_DEPS_LIBS} PARENT_SCOPE)
+  set (CRAB_INCLUDE_DIRS 
+       ${Crab_SOURCE_DIR}/include 
+       ${CMAKE_BINARY_DIR}/include ## crab config.h
+       PARENT_SCOPE)
+  if (LDD_FOUND)
+     set (CRAB_INCLUDE_DIRS ${CRAB_INCLUDE_DIRS} ${LDD_INCLUDE_DIR} PARENT_SCOPE)
+  endif ()
+  if (APRON_FOUND)
+     set (CRAB_INCLUDE_DIRS ${CRAB_INCLUDE_DIRS} ${APRON_INCLUDE_DIR} PARENT_SCOPE)
+  endif ()
 endif ()  
   
 include_directories (${CMAKE_BINARY_DIR}/include)
