Add wrapped interval domain
Initial implementation with only one program test.

Many TODOs: implement multiplication, (signed/unsigned) division,
(signed/unsigned) rem, bitwise operations, and cast operations. More
testing is needed.

The only pending unsound thing is the normalization done by
linear_constraint. We also need to extend linear_constraint with a
flag that says whether the constraint is signed or not. The
implementation for now always assumes signed.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,7 +35,9 @@ function (AddTestDir dirName)
   endforeach(testSrc)
 endfunction ()  
 
+
 AddTestDir (domains)
+AddTestDir (domains/wrapint)
 AddTestDir (inter)
 AddTestDir (cg)
 AddTestDir (cfg)
