--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,10 @@ env:
 
 before_install:
    - until sudo add-apt-repository -y ppa:saiarcot895/chromium-beta; do echo retry; done
-   - until sudo apt-get -qq update; do echo retry; done
    - until sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test; do echo retry; done
-   - sudo apt-add-repository --yes ppa:smspillaz/cmake-2.8.12
+   - until sudo apt-add-repository --yes ppa:smspillaz/cmake-2.8.12; do echo retry; done
    - sudo apt-get --yes update
    - sudo apt-get install --yes cmake cmake-data
-   - until sudo apt-get -qq install ninja-build; do echo retry; done  
-   - ninja --version
    - until sudo apt-get -qq update; do echo retry; done
    - until sudo apt-get -qq install libstdc++5; do echo retry; done
    - if [[ $CMAKE_CXX_COMPILER == g++-5 ]]; then until sudo apt-get -qq install g++-5; do echo retry; done fi
@@ -38,7 +35,6 @@ script:
   - cd crab
   - mkdir -p build
   - cd build
-  - GENERATOR=-GNinja;
   - /usr/bin/cmake -DBOOST_ROOT=$BOOST_ROOT -DUSE_APRON=ON -DUSE_LDD=ON -DENABLE_TESTS=ON -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_PROGRAM_PATH=/usr/bin  -DCMAKE_INSTALL_PREFIX=run ../;
   - /usr/bin/cmake --build . --target ldd && cmake ..
   - /usr/bin/cmake --build . --target apron && cmake ..	
